<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/form_subject"
    tools:context="br.edu.ifsulminas.mch.homeworkhelper.FormSubjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/title_activity_form_subject"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_to_action_bar"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_name"
            android:minHeight="@dimen/edit_texts_height" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_teacher"
            android:minHeight="@dimen/edit_texts_height" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject_schoolYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_schoolYear"
            android:minHeight="@dimen/edit_texts_height" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Seletor de cor -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="Cor da Disciplina"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary" />

    <Spinner
        android:id="@+id/subject_color_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

</LinearLayout>